--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>恐龍跳躍遊戲</title>
   <!--
     單檔（HTML+CSS+JS）恐龍跳躍遊戲
-    版本：V9 — 2025-10-03 (視覺升級)
+    版本：V8 — 2025-10-02 (得分特效)
 
     變更重點：
-    - 撿到寶箱時也會顯示浮動得分數字。
-    - L10 時，「小小恐龍」道具與跟隨的小恐龍都會變為彩虹色。
+    - 火焰噴射摧毀障礙物時會增加分數。
+    - 使用武器摧毀障礙物時，會在畫面上顯示浮動的得分數字。
     - 其他外觀與功能保持不變。
   -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svgA+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0' stop-color='%2360a5fa'/%3E%3Cstop offset='1' stop-color='%238b5cf6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='12' fill='url(%23g)'/%3E%3Cg fill='%230b1020'%3E%3Crect x='18' y='28' width='28' height='16' rx='4'/%3E%3Crect x='34' y='18' width='18' height='12' rx='4'/%3E%3Crect x='22' y='44' width='8' height='10' rx='3'/%3E%3Crect x='34' y='44' width='8' height='10' rx='3'/%3E%3Ccircle cx='48' cy='22' r='2.2' fill='%23fff'/%3E%3Ccircle cx='48' cy='22' r='1.1'/%3E%3C/g%3E%3C/svg%3E"/>
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0' stop-color='%2360a5fa'/%3E%3Cstop offset='1' stop-color='%238b5cf6'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='64' height='64' rx='12' fill='url(%23g)'/%3E%3Cg fill='%230b1020'%3E%3Crect x='18' y='28' width='28' height='16' rx='4'/%3E%3Crect x='34' y='18' width='18' height='12' rx='4'/%3E%3Crect x='22' y='44' width='8' height='10' rx='3'/%3E%3Crect x='34' y='44' width='8' height='10' rx='3'/%3E%3Ccircle cx='48' cy='22' r='2.2' fill='%23fff'/%3E%3Ccircle cx='48' cy='22' r='1.1'/%3E%3C/g%3E%3C/svg%3E"/>
   <meta name="theme-color" content="#0b1020"/>
   <style>
     :root{ --bg:#f6f7fb; --fg:#1f2937; --danger:#ef4444; --night-sky1:#0b1020; --night-sky2:#0f172a; --night-fg:#e5e7eb; }
@@ -252,7 +252,7 @@
       else if(r<0.85){ pType='gun';  w=52; h=28; y= groundY() - (70 + Math.random()*120); }
       else { pType='mini'; w=30; h=24; y= groundY() - h; }
       if(state.score>=5000 && Math.random()<0.25){ pType='flame'; w=40; h=40; y= groundY() - (70 + Math.random()*120); }
-      const obj={type:pType,x:baseX,y,w,h}; if(p.type==='star') obj.spin=0; if(p.type==='gun'||p.type==='flame') obj.wiggle=0; state.powerups.push(obj);
+      const obj={type:pType,x:baseX,y,w,h}; if(pType==='star') obj.spin=0; if(pType==='gun'||pType==='flame') obj.wiggle=0; state.powerups.push(obj);
     }
     let spawnTimer=0, powerTimer=3.5; 
 
@@ -313,11 +313,7 @@
 
       const dbox={x:dino.x-dino.w*0.45, y:dino.y, w:dino.w*0.9, h:dino.h};
       for(let i=state.powerups.length-1;i>=0;i--){ const p=state.powerups[i]; if(intersects(dbox,p)){
-        if(p.type==='chest'){ 
-          state.score+=100; 
-          spawnFloatingScore(100, p.x + p.w / 2, p.y);
-          if(audio.enabled) sfx.pickup(); 
-        }
+        if(p.type==='chest'){ state.score+=100; if(audio.enabled) sfx.pickup(); }
         else if(p.type==='star'){ state.invincibleUntil = state.time+6.0; if(audio.enabled) sfx.star(); }
         else if(p.type==='gun'){ state.mgUntil = state.time+6.0; state.mgFireTimer=0; if(audio.enabled) sfx.gun(); }
         else if(p.type==='mini'){ state.littles++; if(audio.enabled) sfx.pickup(); }
@@ -511,22 +507,12 @@
     function drawFollower(x,y,scale, skin){
       ctx.save(); ctx.translate(x,y); const w=70*(scale||0.55),h=70*(scale||0.55);
       const body=skin?.body || '#4b5563'; const head=skin?.head || body; const eye=skin?.eye || '#111';
-       if (body === 'rainbow') {
-        const grad = ctx.createLinearGradient(-w*0.35,0, w*0.60,0);
-        const stops=[[0,'#ef4444'],[0.16,'#f59e0b'],[0.33,'#facc15'],[0.50,'#10b981'],[0.66,'#3b82f6'],[0.83,'#8b5cf6'],[1,'#ec4899']];
-        stops.forEach(([p,c])=>grad.addColorStop(p,c));
-        ctx.fillStyle=grad;
-      } else {
-        ctx.fillStyle=body;
-      }
-      roundRect(-w*0.35,h*0.05,w*0.7,h*0.55,8,true);
-      if (head !== 'rainbow') { ctx.fillStyle=head; }
-      roundRect(w*0.05,-h*0.15,w*0.45,h*0.35,8,true);
+      ctx.fillStyle=body; roundRect(-w*0.35,h*0.05,w*0.7,h*0.55,8,true);
+      ctx.fillStyle=head; roundRect(w*0.05,-h*0.15,w*0.45,h*0.35,8,true);
       ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(w*0.38,-h*0.02,3.2,0,Math.PI*2); ctx.fill();
       ctx.fillStyle=eye; ctx.beginPath(); ctx.arc(w*0.38,-h*0.02,1.5,0,Math.PI*2); ctx.fill();
       ctx.restore();
     }
-
     function drawFollowers(){
       const skin = getSkinForTier(currentSkinTier());
       const baseY = dino.y + (dino.h - 40);
@@ -545,24 +531,7 @@
     function drawJet(ob){ const {x,y,w,h}=ob; ctx.save(); ctx.translate(x,y); ctx.fillStyle=state.night? '#60a5fa' : '#111827'; ctx.beginPath(); ctx.moveTo(0,h*0.5); ctx.lineTo(w*0.55,h*0.5); ctx.lineTo(w*0.85,h*0.35); ctx.lineTo(w,h*0.5); ctx.lineTo(w*0.85,h*0.65); ctx.lineTo(w*0.55,h*0.5); ctx.closePath(); ctx.fill(); ctx.beginPath(); ctx.moveTo(w*0.22,0); ctx.lineTo(w*0.52,h*0.5); ctx.lineTo(w*0.22,h); ctx.closePath(); ctx.fill(); const flame=6+6*Math.sin(state.time*20); ctx.fillStyle=state.night? '#fbbf24' : '#f59e0b'; ctx.beginPath(); ctx.moveTo(-flame,h*0.5); ctx.lineTo(0,h*0.4); ctx.lineTo(0,h*0.6); ctx.closePath(); ctx.fill(); ctx.restore(); }
     function drawDragon(ob){ const {x,y,w,h}=ob; ctx.save(); ctx.translate(x,y); ctx.fillStyle = '#f59e0b'; roundRect(w*0.05,h*0.15,w*0.70,h*0.55,16,true); ctx.fillStyle = '#fde68a'; roundRect(w*0.16,h*0.36,w*0.46,h*0.28,10,true); ctx.fillStyle = '#f59e0b'; roundRect(-w*0.08,h*0.18,w*0.34,h*0.30,14,true); ctx.fillStyle = '#fff'; ctx.beginPath(); ctx.arc(w*0.12,h*0.30,5,0,Math.PI*2); ctx.fill(); ctx.fillStyle='#111'; ctx.beginPath(); ctx.arc(w*0.12,h*0.30,2.4,0,Math.PI*2); ctx.fill(); ctx.fillStyle = state.night? '#93c5fd' : '#10b981'; ctx.beginPath(); ctx.moveTo(w*0.38,h*0.18); ctx.quadraticCurveTo(w*0.78,0,w*0.98,h*0.18); ctx.quadraticCurveTo(w*0.72,h*0.34,w*0.38,h*0.22); ctx.closePath(); ctx.fill(); ctx.fillStyle = '#f59e0b'; ctx.beginPath(); ctx.moveTo(w*0.70,h*0.58); ctx.quadraticCurveTo(w*0.92,h*0.70,w*1.02,h*0.58); ctx.lineTo(w*0.86,h*0.52); ctx.closePath(); ctx.fill(); ctx.restore(); }
     function drawPalm(ob){ const {x,y,w,h}=ob; ctx.save(); ctx.translate(x + w*0.5, y + h); ctx.fillStyle = '#8b5a2b'; roundRect(-w*0.25, -h, w*0.5, h, 6, true); ctx.translate(0, -h); ctx.rotate(Math.sin(state.palmWaves + x*0.01) * 0.06); const leaf = (ang)=>{ ctx.save(); ctx.rotate(ang); ctx.fillStyle = '#10b981'; ctx.beginPath(); ctx.moveTo(0,0); ctx.quadraticCurveTo(32,-6,64,0); ctx.quadraticCurveTo(32,6,0,0); ctx.fill(); ctx.restore(); }; leaf(-0.6); leaf(0); leaf(0.6); ctx.restore(); }
-    
-    function drawMiniPowerup(p){ 
-      const {x,y,w,h}=p; 
-      ctx.save(); ctx.translate(x,y); 
-      const tier = currentSkinTier();
-      if (tier >= 10) {
-        const grad = ctx.createLinearGradient(0,0, w*0.8, 0);
-        const stops=[[0,'#ef4444'],[0.2,'#facc15'],[0.4,'#10b981'],[0.6,'#3b82f6'],[0.8,'#8b5cf6'],[1,'#ec4899']];
-        stops.forEach(([pos,c])=>grad.addColorStop(pos,c));
-        ctx.fillStyle = grad;
-      } else {
-        ctx.fillStyle='#374151'; 
-      }
-      roundRect(0,h*0.25,w*0.8,h*0.6,6,true); 
-      ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(w*0.6,h*0.45,2.5,0,Math.PI*2); ctx.fill(); 
-      ctx.restore(); 
-    }
-
+    function drawMiniPowerup(p){ const {x,y,w,h}=p; ctx.save(); ctx.translate(x,y); ctx.fillStyle='#374151'; roundRect(0,h*0.25,w*0.8,h*0.6,6,true); ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(w*0.6,h*0.45,2.5,0,Math.PI*2); ctx.fill(); ctx.restore(); }
     function drawBullet(b){ ctx.save(); ctx.translate(b.x,b.y); ctx.fillStyle=state.night? '#e5e7eb' : '#ef4444'; ctx.fillRect(0,0,b.w,b.h); ctx.restore(); }
     function drawChest(p){ const {x,y,w,h}=p; ctx.save(); ctx.translate(x,y); ctx.fillStyle='#f59e0b'; roundRect(0,0,w,h,4,true); ctx.fillStyle='#8b5a2b'; ctx.fillRect(0,h*0.5,w,h*0.18); ctx.fillStyle='#fff'; ctx.fillRect(w*0.48,h*0.2,w*0.04,h*0.6); ctx.fillRect(w*0.3,h*0.45,w*0.4,h*0.08); ctx.restore(); }
     function drawStar(p){ const {x,y,w,h,spin}=p; const r=Math.min(w,h)/2; ctx.save(); ctx.translate(x+w/2,y+h/2); ctx.rotate(spin); const spikes=5; let rot=Math.PI/2*3; const step=Math.PI/spikes; ctx.beginPath(); ctx.moveTo(0,-r); for(let i=0;i<spikes;i++){ ctx.lineTo(Math.cos(rot)*r,Math.sin(rot)*r); rot+=step; ctx.lineTo(Math.cos(rot)*r*0.5,Math.sin(rot)*r*0.5); rot+=step; } ctx.lineTo(0,-r); ctx.closePath(); ctx.fillStyle='#facc15'; ctx.fill(); ctx.restore(); }
